force-app/main/default/objects/Amenity__c/fields/Master_Project__c.field-meta.xml
<CustomField>
    <fullName>Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Project</label>
    <referenceTo>Master_Project__c</referenceTo>
    <relationshipLabel>Amenities</relationshipLabel>
    <relationshipName>Aminities</relationshipName>
    <type>Lookup</type>
</CustomField>