force-app/main/default/objects/Amenity__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Aminities</relationshipLabel>
    <relationshipName>Aminities</relationshipName>
    <type>Lookup</type>
</CustomField>