force-app/main/default/objects/Amenity__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Aminities</relationshipLabel>
    <relationshipName>Aminities</relationshipName>
    <type>Lookup</type>
</CustomField>