force-app/main/default/objects/Amenity__c/fields/Tower_PS__c.field-meta.xml
<CustomField>
    <fullName>Tower_PS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>PropStrength__Tower__c</referenceTo>
    <relationshipLabel>Amenities</relationshipLabel>
    <relationshipName>Aminities</relationshipName>
    <type>Lookup</type>
</CustomField>