force-app/main/default/objects/Amenity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Amenity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GYM</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Kids Play Area</fullName>
            </value>
            <value>
                <fullName>Retail Spaces</fullName>
            </value>
            <value>
                <fullName>Rooftop Terrace</fullName>
            </value>
            <value>
                <fullName>Health Club</fullName>
            </value>
            <value>
                <fullName>Event Space</fullName>
            </value>
            <value>
                <fullName>Spin Studio</fullName>
            </value>
            <value>
                <fullName>Yoga Zone</fullName>
            </value>
            <value>
                <fullName>Pentanque Boules Lawn</fullName>
            </value>
            <value>
                <fullName>Tai Chi Terrace</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Paddle</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Basketball Court</fullName>
            </value>
            <value>
                <fullName>Walking and Jogging Track</fullName>
            </value>
            <value>
                <fullName>Sky Garden</fullName>
            </value>
            <value>
                <fullName>Barbeque Area</fullName>
            </value>
            <value>
                <fullName>Outdoor Games Area</fullName>
            </value>
            <value>
                <fullName>Outdoor Cinema</fullName>
            </value>
            <value>
                <fullName>Zen Garden</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Sauna</fullName>
            </value>
            <value>
                <fullName>Infinity Pool</fullName>
            </value>
            <value>
                <fullName>Swimming Pool Cabana</fullName>
            </value>
            <value>
                <fullName>Sky Deck</fullName>
            </value>
            <value>
                <fullName>Open Amphitheater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>